--- a/CodemakersTeam/Storyboards/Base.lproj/Main.storyboard
+++ b/CodemakersTeam/Storyboards/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemGray2Color"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="person.fill" catalog="system" id="HUg-2T-rC8"/>
                 </viewController>
@@ -67,6 +67,7 @@
                                 <connections>
                                     <outlet property="iconImageView" destination="huQ-nc-BU0" id="cDR-js-D5c"/>
                                     <outlet property="userNameLabel" destination="gpg-Z2-kwY" id="zSH-H5-lU0"/>
+                                    <segue destination="Myn-07-Xo3" kind="show" id="aql-aK-4Mc"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -76,9 +77,6 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="e0G-X8-cZB"/>
-                    <connections>
-                        <segue destination="Myn-07-Xo3" kind="show" id="MU3-eU-XZk"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3sm-Ii-QgY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -87,7 +85,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="nAJ-ct-00Z">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Myn-07-Xo3" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="Myn-07-Xo3" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="G6e-8a-leV"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dFe-jS-bP2">
@@ -113,7 +111,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="3uL-mt-vzh"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemGray2Color"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="info.circle.fill" catalog="system" id="Utg-Am-le7"/>
                 </viewController>
@@ -128,10 +126,37 @@
                     <view key="view" contentMode="scaleToFill" id="BHf-B4-1ac">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lal-jE-IKW">
+                                <rect key="frame" x="16" y="99" width="288" height="390"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hobby" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g9S-Sr-Lih">
+                                <rect key="frame" x="16" y="61" width="77" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="YDF-L1-vTv"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemGray2Color"/>
+                        <constraints>
+                            <constraint firstItem="YDF-L1-vTv" firstAttribute="bottom" secondItem="Lal-jE-IKW" secondAttribute="bottom" constant="30" id="0Xd-69-eW0"/>
+                            <constraint firstItem="g9S-Sr-Lih" firstAttribute="leading" secondItem="YDF-L1-vTv" secondAttribute="leading" constant="16" id="6jI-tK-DfY"/>
+                            <constraint firstItem="Lal-jE-IKW" firstAttribute="top" secondItem="YDF-L1-vTv" secondAttribute="top" constant="55" id="LEo-Qt-ZqR"/>
+                            <constraint firstItem="YDF-L1-vTv" firstAttribute="trailing" secondItem="Lal-jE-IKW" secondAttribute="trailing" constant="16" id="SZP-uW-LXg"/>
+                            <constraint firstItem="YDF-L1-vTv" firstAttribute="trailing" secondItem="g9S-Sr-Lih" secondAttribute="trailing" constant="227" id="YgG-Hb-RFZ"/>
+                            <constraint firstItem="Lal-jE-IKW" firstAttribute="top" secondItem="g9S-Sr-Lih" secondAttribute="bottom" constant="8" symbolic="YES" id="aWa-bJ-Pt5"/>
+                            <constraint firstItem="Lal-jE-IKW" firstAttribute="leading" secondItem="YDF-L1-vTv" secondAttribute="leading" constant="16" id="fxo-MX-zaN"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="gamecontroller.fill" catalog="system" id="z2z-Pd-n8w"/>
+                    <connections>
+                        <outlet property="hobbyTextView" destination="Lal-jE-IKW" id="Hoz-PN-scd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YUS-J5-Y8u" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -160,8 +185,14 @@
         <image name="gamecontroller.fill" catalog="system" width="128" height="80"/>
         <image name="info.circle.fill" catalog="system" width="128" height="121"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
